digiKam 7.6.0 - Release date: 2022-xx-xx

*****************************************************************************************************
NEW FEATURES:


*****************************************************************************************************
BUGFIXES:

001 ==> 448531 - Changelog has wrong spelling for iNaturalist web service.
002 ==> 420543 - Batch conversion from png to jp2 fails to process random images.
003 ==> 170131 - Create dvd menu for a slide show.
004 ==> 091889 - wanna make photocd/ vcd of still images.
005 ==> 096895 - Using tags images are sorted by name in slideshows even if order by date is selected.
006 ==> 172895 - Setup verbiage patches for slideshow and albumview.
007 ==> 176584 - Mousewheeling on a slideshow sometimes crash digiKam.
008 ==> 092568 - Can we please see and assign star rating during slideshow.
009 ==> 161885 - Support of mouse clicks in slideshow.
010 ==> 097069 - E-mail contains comments file even if there are no comments.
011 ==> 161114 - Resizing and emailing from digiKam results in no-more readable.
012 ==> 155023 - Crashs when trying to send images via digiKam.
013 ==> 105704 - Send image should use the mail client defined in KControl.
014 ==> 150453 - Emailing a raw image creates an incorrect filename.
015 ==> 131343 - Sending images from digiKam fails if directory name contains.
016 ==> 107341 - Wish - photo printing colour temperature is too cool.
017 ==> 120648 - Make fails with errors.
018 ==> 137359 - Unclear wording in metadata editor.
019 ==> 175304 - Db does replicate to iptc or exif.
020 ==> 224583 - MetadataEdit writes invalid EXIF data to image.
021 ==> 162097 - Jpeg exif comment does not appears in digikam exif editor.
022 ==> 137660 - Duplication of keyword when editing several IPTC tags.
023 ==> 