@@ -3,6 +3,7 @@ digiKam 7.6.0 - Release date: 2022-xx-xx
 *****************************************************************************************************
 NEW FEATURES:
 
+General: Update Libraw to snapshoot 20220116.
 
 *****************************************************************************************************
 BUGFIXES:
